# TransTrans

./: .gitignore  README.md  annotate.py  constant.py  deoral.py  hotwords.txt  main.py  phrase.py  pyproject.toml  pyrightconfig.json  transcript.py  yutto.toml
dicts/: combine  common  curse  hot  pet  不定代词  口头禅  填充词  指示代词  热词  询问语  语气词
src/: test.py
src/transtrans/: __init__.py  annotate.py  constants.py  deoral.py  phrase.py  transcript.py  utils.py
transtrans/: annotate.py  constants.py  deoral.py  transcript.py  utils.py
