[project]
name = "TransTrans"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "funasr>=1.2.6",
    "modelscope>=1.28.0",
    "numpy==1.26",
    "torch==2.1.2",
    "torchaudio>=2.1.2",
    "yutto>=2.0.3",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.15",
    "jupyterlab>=4.4.4",
    "matplotlib>=3.10.3",
]
